# AGREE

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml  requirements.txt
AGREE/: __init__.py  io.py  model.py
Data/: README.md
docs/: api.rst  index.rst  installation.rst  method.rst  usage.rst
examples/: demo_synthetic.py
experiments/: README.md
notebooks/: README.md
scripts/: run_agree.py
tests/: test_agree_smoke.py
