[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AGREE"
version = "0.1.0"
description = "Spatial transcriptomics ensemble consensus clustering with weighted DeepWalk."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "CSUBioGroup"}
]
dependencies = [
  "numpy>=1.22",
  "pandas>=1.4",
  "scipy>=1.8",
  "scikit-learn>=1.1",
  "networkx>=2.8",
  "gensim>=4.3"
]

[project.optional-dependencies]
h5ad = ["scanpy>=1.9"]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["AGREE"]
